LIKING DISLIKING WORKS ON THE POST COMPONENT WOOOOO JUST NEED TO UPDATE THE POSTPAGE WITH THE CODE FIGURE OUT THE COMMENTING AGAIN ON POSTPAGE AS WELL AS THIS RELOADING BS

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -50,11 +50,11 @@
       color: black;
       width: 15vw;
       height: 90%;
-
       border-left: solid 1px black;
       max-width: 500px;
-      #userImage {
-        border: solid 1px black;
+      p {
+        #userImage {
+        }
       }
 
       .tab {
