--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -278,6 +278,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+
     h1 {
       width: 90%;
       border-bottom: solid 1px rgb(100, 100, 100);
@@ -289,11 +290,13 @@
       margin-top: 10px;
     }
     #profilePic {
-      border: solid 1px rgb(100, 100, 100);
       margin-top: 10px;
       width: 90px;
       height: 80px;
       border-radius: 100%;
+      box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+        rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+        rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
   }
 }
