--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -13,7 +13,6 @@
     }
     width: 15vw;
     height: 100vh;
-    max-height: 1000px;
     max-width: 500px;
     border-right: solid 1px rgb(100, 100, 100);
     border-left: solid 0.3px rgb(100, 100, 100);
@@ -84,6 +83,7 @@
       }
       #postForum {
         margin-top: 5px;
+
         max-width: 90%;
         margin-left: 20px;
         color: rgb(180, 217, 247);
@@ -159,11 +159,12 @@
       border-bottom-right-radius: 5px;
       padding: 5px;
       border: solid 1px black;
-      border-top: none;
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
       justify-content: flex-start;
+      margin-top: 2px;
+      border-top: solid 1px black;
       .commentSection {
         display: flex;
         flex-direction: column;
@@ -274,7 +275,7 @@
     width: 15vw;
     color: black;
     display: flex;
-    max-height: 1000px;
+    height: 100vh;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
