riding console logs

--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -289,6 +289,10 @@
     }
     h2 {
       margin-top: 10px;
+      width: 90%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     #profilePic {
       margin-top: 10px;
