--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -7,18 +7,12 @@
   max-height: 3000px;
   width: 100vw;
   margin: 0 auto;
-  color: white;
-
-  background: rgb(240, 240, 240);
-  background: linear-gradient(
-    180deg,
-    rgba(240, 240, 240, 1) 44%,
-    rgba(177, 176, 176, 1) 100%
-  );
   max-height: 3000px;
   width: 100vw;
   max-width: 2650px;
   margin: 0 auto;
+  background-image: url("/src/assets/AppFunctions/loginBackground.png");
+  background-size: cover;
   .showDetails {
     z-index: 5;
     position: absolute;
@@ -47,11 +41,17 @@
       border-radius: 7px;
       padding: 20px;
       height: 66%;
-
+      overflow-y: scroll;
+      .logoImage {
+        width: 80px;
+        height: 80px;
+      }
       h1 {
         font-size: 40px;
         font-weight: bolder;
         color: black;
+        display: flex;
+        align-items: center;
       }
       .desText {
         font-size: 15px;
@@ -62,10 +62,8 @@
     }
   }
   .leftSide {
-    border-radius: 4px;
     background-color: whitesmoke;
     color: black;
-    border: solid 1px black;
     width: 30%;
     height: 80%;
     animation: myAni 0.34s;
@@ -154,8 +152,17 @@
     align-items: center;
     justify-content: center;
     .greeting {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
       color: black;
       font-weight: 300;
+      width: 100%;
+      font-size: 15px;
+      max-width: 800px;
+      padding-left: 10px;
+      height: 120px;
     }
   }
 }
