--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -233,6 +233,10 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: space-evenly;
+                a:hover {
+                  color: rgb(191, 63, 27);
+                  cursor: pointer;
+                }
               }
             }
           }
@@ -248,11 +252,16 @@
           .industriesDiv {
             font-weight: bold;
             padding-left: 10%;
-            height: 90%;
+            height: 80%;
             border-left: solid 1px rgb(100, 100, 100);
             display: flex;
             justify-content: space-evenly;
             flex-direction: column;
+            a {
+            }
+            a:hover {
+              color: rgb(191, 63, 27);
+            }
           }
         }
         .footerSection3 {
@@ -275,6 +284,7 @@
                 rgba(0, 0, 0, 1),
                 rgba(0, 0, 0, 1)
               );
+              border-radius: 5px;
             }
           }
         }
