--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -10,6 +10,62 @@
   margin: 0 auto;
   background-color: whitesmoke;
   color: black;
+  .showDetails {
+    z-index: 5;
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    top: 0px;
+    background-color: rgba(
+      255,
+      255,
+      255,
+      0.5
+    ); /* Adjust the alpha value for transparency */
+    backdrop-filter: blur(10px); /* Adjust the blur radius as needed */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+    .desModal {
+      display: flex;
+      flex-direction: column;
+      margin-top: 20vh;
+      width: 50%;
+      background-color: whitesmoke;
+      color: black;
+      border-radius: 7px;
+      padding: 20px;
+      height: 66%;
+      overflow-y: scroll;
+      .logoImage {
+        width: 80px;
+        height: 80px;
+      }
+      .x {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        font-size: 20px;
+        color: rgb(191, 63, 27);
+      }
+      h1 {
+        font-size: 40px;
+        font-weight: bolder;
+        color: black;
+        display: flex;
+        align-items: center;
+      }
+      .desText {
+        font-size: 15px;
+      }
+      span {
+        font-weight: bold;
+      }
+    }
+  }
   #logo {
     min-width: 50px;
     max-width: 3vw;
