--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -1,6 +1,5 @@
 .ChatsPage {
   background-color: whitesmoke;
-  position: absolute;
   top: 15vh;
   width: 100vw;
   height: 95vh;
@@ -10,6 +9,10 @@
   align-items: center;
   color: white;
 
+  max-height: 3000px;
+  width: 100vw;
+  max-width: 2650px;
+  margin: 0 auto;
   .signUpPrompt {
     position: relative;
     z-index: 0;
@@ -74,6 +77,7 @@
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
+      justify-content: space-evenly;
       overflow-y: scroll;
       overflow-x: hidden;
       -ms-overflow-style: none;
@@ -89,12 +93,14 @@
         //width: 32.5vw;
         padding: 5px;
         display: flex;
-
         align-items: center;
+        max-width: 900px;
+        max-height: 150px;
         span {
+          font-weight: 550;
         }
       }
-      #userMessage > p {
+      #userMessage {
         width: 40vw;
         height: 100%;
         margin: 0;
@@ -113,7 +119,7 @@
         color: white;
         overflow-x: scroll;
       }
-      #friendMessage > p {
+      #friendMessage {
         background-color: rgb(243, 242, 242);
         width: 40vw;
         height: 100%;
@@ -127,8 +133,9 @@
         justify-content: flex-start;
         padding-top: 10px;
         padding-left: 10px;
-        margin-top: 10px;
         overflow-x: scroll;
+
+        margin-right: 25vw;
       }
     }
 
@@ -206,7 +213,7 @@
     h2 {
       color: black;
       font-size: 20px;
-      font-weight: bold;
+      font-weight: bolder;
     }
     h1 {
       width: 10vw;
@@ -218,7 +225,9 @@
 
       p {
         font-size: 2vmin;
-        color: white;
+        color: black;
+        margin-top: 5px;
+        font-weight: 600;
       }
     }
 
