--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -74,6 +74,8 @@
           justify-content: flex-start;
           align-items: center;
           height: 100%;
+          color: black;
+          font-weight: bolder;
           .userPic {
             width: 40%;
             display: flex;
