--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -80,15 +80,20 @@
 
 @media (max-width: 900px) {
   .SearchBar {
-    top: 5vh;
+    top: 15vh;
     width: 100vw;
     .form {
-      width: 95vw;
+      width: 100vw;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       input {
-        width: 75vw;
+        width: 300px;
+        height: 25px;
       }
       button {
-        width: 25vw;
+        height: 25px;
+        font-size: 10px;
       }
       button:hover {
       }
