--- a/src/components/ForumModal/ForumModal.module.scss
+++ b/src/components/ForumModal/ForumModal.module.scss
@@ -115,46 +115,47 @@
   }
 }
 
-// @media (max-width: 900px) {
-//   .FormModal {
-//     h1 {
-//       margin-top: 10vh;
-//       color: black;
-//       margin-left: 10px;
-//     }
+@media (max-width: 900px) {
+  .FormModal {
+    height: auto;
+    h1 {
+      margin-top: 10vh;
+      color: black;
+      margin-left: 10px;
+    }
 
-//     section {
-//       height: 100vh;
-//       width: 100vw;
+    section {
+      height: 100vh;
+      width: 90vw;
 
-//       p {
-//         font-size: 25px;
-//         height: 30px;
-//         width: 90vw;
-//       }
+      p {
+        font-size: 25px;
+        height: 30px;
+        width: 90vw;
+      }
 
-//       .inputField {
-//         width: 80vw;
+      .inputField {
+        width: 80vw;
 
-//         h3 {
-//           width: 80vw;
-//         }
+        h3 {
+          width: 80vw;
+        }
 
-//         input {
-//           width: 80vw;
-//         }
-//       }
+        input {
+          width: 80vw;
+        }
+      }
 
-//       button {
-//         width: 100px;
-//         height: 50px;
-//       }
+      button {
+        width: 100px;
+        height: 50px;
+      }
 
-//       #description {
-//       }
-//     }
-//   }
-// }
+      #description {
+      }
+    }
+  }
+}
 
 // @media (prefers-color-scheme: dark) {
 //   .FormModal {
