--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  border-top: solid 1px black;
+  border-top: solid 1px rgb(200, 200, 200);
   align-items: flex-start;
   justify-content: flex-start;
   align-items: flex-start;
@@ -25,7 +25,7 @@
     justify-content: flex-start;
     color: black;
     height: 100vh;
-    border-left: solid 1px black;
+    border-left: solid 1px rgb(200, 200, 200);
     h1 {
       width: 90%;
       display: flex;
@@ -122,7 +122,7 @@
       border: none;
       background-color: whitesmoke;
       border-radius: 5px;
-      border: solid 2px black;
+      border: solid 1px rgb(200, 200, 200);
       .post {
         background-color: white;
         padding-right: 40px;
@@ -239,9 +239,9 @@
     width: 15vw;
     height: 100vh;
     max-width: 500px;
-    border-right: solid 1px rgb(100, 100, 100);
-    border-left: solid 0.3px rgb(100, 100, 100);
-    border-bottom: solid 1px rgb(100, 100, 100);
+    border-right: solid 1px rgb(200, 200, 200);
+    border-left: solid 0.3px rgb(200, 200, 200);
+    border-bottom: solid 1px rgb(200, 200, 200);
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
