--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -94,11 +94,14 @@
       }
     }
     .userInfo {
-      width: 15vw;
+      width: 20vw;
+      height: 500px;
       padding-right: 1px;
       display: flex;
       flex-direction: column;
-      border-right: solid 1px black;
+      align-items: center;
+      border-right: solid 1px 200;
+      border-bottom: solid 1px 200;
       background-color: whitesmoke;
       .pageTitle {
         color: black;
@@ -130,7 +133,7 @@
           align-items: center;
           font-weight: bold;
           height: 20px;
-          border-bottom: solid rgb(100, 100, 100) 1px;
+          border-bottom: solid rgb(200, 200, 200) 1px;
         }
         .userForum {
           display: flex;
@@ -150,22 +153,25 @@
       }
     }
     .homePosts {
-      width: 70vw;
-      max-width: 1720px;
-      border-left: solid 1px rgb(100, 100, 100);
-      border-right: solid 1px rgb(100, 100, 100);
-      border-top: solid 1px rgb(100, 100, 100);
+      width: 60vw;
+      max-width: 1500px;
+      border-left: solid 1px rgb(200, 200, 200);
+      border-right: solid 1px rgb(200, 200, 200);
+      border-top: solid 1px rgb(200, 200, 200);
       border-radius: 5px;
+      max-height: 1600px;
+      overflow-y: scroll;
       .postList {
         margin-top: 7vh;
       }
     }
     .explore {
-      width: 15vw;
+      width: 20vw;
       background-color: whitesmoke;
       color: black;
       max-width: 500px;
-      border-left: 1px solid black;
+      height: 500px;
+      border-left: 1px solid rgb(200, 200, 200);
       .createForumDiv {
         width: 15vw;
         max-width: 500px;
