--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -14,8 +14,8 @@
   .userForums {
     width: 15vw;
     height: 100%;
-    border-right: solid 1px black;
-    border-left: solid 0.3px black;
+    border-right: solid 1px rgb(200, 200, 200);
+    border-left: solid 0.3px rgb(200, 200, 200);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,7 +27,7 @@
       color: black;
       font-weight: bold;
       width: 90%;
-      border-bottom: solid 1px black;
+      border-bottom: solid 1px rgb(200, 200, 200);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -61,7 +61,7 @@
       flex-direction: column;
       height: 25vh;
       width: 60vw;
-      border-bottom: solid 1px black;
+      border-bottom: solid 1px rgb(200, 200, 200);
       .userAsideTop {
         display: flex;
         justify-content: space-evenly;
@@ -103,7 +103,7 @@
             display: flex;
             background-color: whitesmoke;
             border-radius: 5px;
-            border: solid 1px black;
+            border: solid 1px rgb(200, 200, 200);
             align-items: center;
             justify-content: space-evenly;
             flex-direction: column;
@@ -145,7 +145,7 @@
             height: 90%;
             overflow-y: scroll;
             color: white;
-            border: solid 1px black;
+            border: solid 1px rgb(200, 200, 200);
             padding: 5px;
             border-radius: 3px;
             color: black;
@@ -180,7 +180,7 @@
         .createPost {
           color: black;
           border-radius: 20px;
-          border: solid 1px black;
+          border: solid 1px rgb(200, 200, 200);
           padding-left: 10px;
           padding-right: 10px;
         }
@@ -232,7 +232,7 @@
 
     color: black;
     height: 100vh;
-    border-left: solid 1px black;
+    border-left: solid 1px rgb(200, 200, 200);
     h1 {
       margin-top: 10px;
 
