--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -10,6 +10,7 @@
     max-width: 600px;
     display: flex;
     align-items: center;
+    position: fixed;
     input {
       background-color: rgb(192, 192, 192);
       color: black;
