--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,5 +1,5 @@
 .nav {
-  border-bottom: solid 1px black;
+  border-bottom: solid 1px rgb(220, 220, 220);
   background-color: whitesmoke;
   .tabList {
     color: rgb(200, 200, 200);
@@ -7,10 +7,12 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: whitesmoke;
+
     color: black;
     width: 100vw;
     max-width: 2650px;
     margin: 0 auto;
+    max-height: 150px;
     .emptyArea {
       width: 15vw;
       max-width: 500px;
