--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -14,6 +14,7 @@
   .userForums {
     width: 15vw;
     height: 100%;
+    max-width: 500px;
     border-right: solid 1px rgb(200, 200, 200);
     border-left: solid 0.3px rgb(200, 200, 200);
     display: flex;
@@ -62,6 +63,8 @@
       height: 25vh;
       width: 60vw;
       border-bottom: solid 1px rgb(200, 200, 200);
+
+      max-height: 300px;
       .userAsideTop {
         display: flex;
         justify-content: space-evenly;
@@ -229,10 +232,10 @@
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-
     color: black;
     height: 100vh;
     border-left: solid 1px rgb(200, 200, 200);
+
     h1 {
       margin-top: 10px;
 
