--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -211,9 +211,9 @@
       display: none;
     }
     h2 {
-      color: black;
-      font-size: 20px;
-      font-weight: bolder;
+      font-size: 40px;
+      font-weight: bold;
+      color: rgb(191, 63, 27);
     }
     h1 {
       width: 10vw;
