--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -109,9 +109,9 @@
       border-bottom: solid 1px 200;
       background-color: whitesmoke;
       .pageTitle {
-        color: black;
-        font-size: 50px;
+        font-size: 30px;
         color: rgb(191, 63, 27);
+        font-weight: bold;
       }
       .profilePic {
         width: 75px;
