--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -21,7 +21,7 @@
     flex-direction: column;
     align-items: center;
     .pageTitle {
-      font-size: min(15vw, 30px);
+      font-size: 40px;
       color: rgb(191, 63, 27);
     }
     h2 {
@@ -63,7 +63,6 @@
       height: 25vh;
       width: 60vw;
       border-bottom: solid 1px rgb(200, 200, 200);
-
       max-height: 300px;
       .userAsideTop {
         display: flex;
