--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -77,7 +77,7 @@
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: flex-start;
       overflow-y: scroll;
       overflow-x: hidden;
       -ms-overflow-style: none;
@@ -118,6 +118,7 @@
         background-color: rgb(180, 217, 247);
         color: white;
         overflow-x: scroll;
+        margin-bottom: 10px;
       }
       #friendMessage {
         background-color: rgb(243, 242, 242);
@@ -134,7 +135,7 @@
         padding-top: 10px;
         padding-left: 10px;
         overflow-x: scroll;
-
+        margin-bottom: 10px;
         margin-right: 25vw;
       }
     }
