--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -64,7 +64,8 @@
       max-width: 1000px;
       h1 {
         margin: 0;
-        font-size: 10vh;
+        font-size: 100px;
+
         color: transparent;
         color: rgb(191, 63, 27);
       }
