--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -42,7 +42,14 @@
       margin-top: 20px;
     }
     #des {
+      height: 200px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: column;
+      overflow-y: scroll;
       padding: 5px;
+      width: 100%;
       border-radius: 5px;
     }
   }
