--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -99,7 +99,7 @@
     }
     .userInfo {
       width: 20vw;
-      height: 500px;
+      height: 700px;
       max-width: 500px;
       padding-right: 1px;
       display: flex;
@@ -124,11 +124,12 @@
       .userForums {
         margin-top: 10px;
         width: 100%;
-        height: 40%;
+        height: 100%;
         display: flex;
         justify-content: flex-start;
         flex-direction: column;
         align-items: center;
+        overflow-y: scroll;
         h2 {
           margin-top: 10px;
           color: black;
@@ -205,6 +206,7 @@
       }
       .forumListDiv {
         .forumList {
+          height: 100%;
           color: rgb(80, 80, 80);
           height: 60vh;
           width: 100%;
