--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -268,7 +268,7 @@
     margin: 0 auto;
     height: auto;
     .userForums {
-      width: 100vw;
+      display: none;
       .pageTitle {
         font-size: 15px;
       }
