--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -279,172 +279,60 @@
     }
   }
 }
-
+//--------------------------- MOBILE VIEW ---------------------------//
+//--------------------------- MOBILE VIEW ---------------------------//
+//--------------------------- MOBILE VIEW ---------------------------//
 @media (max-width: 900px) {
   .ForumPage {
-    width: 100vw;
-    height: 140vh;
-    display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    color: black;
-
-    top: 0;
-    header {
-      padding: 10px;
-      padding-left: 5vw;
+    .allForumsAside {
+      display: none;
+      .pageTitle {
+        display: none;
+      }
+    }
+    .forumStatAside {
       width: 100vw;
-      height: 30vh;
-      h1 {
+      height: 200px;
+      overflow-y: scroll;
+      .stat {
+        width: 100vw;
+        height: 10px;
       }
-      h2 {
-      }
-      h3 {
-      }
-      h4 {
-      }
-      section {
-        display: flex;
-        justify-content: flex-start;
-        aside {
-          width: 90vw;
-          button {
-            margin: 10px;
-          }
-        }
+      #des {
+        height: 25px;
+        overflow-y: scroll;
       }
     }
-    .postsList {
-      width: 90vw;
-      left: -20px;
-      .post {
-        li:hover {
+    .forumSide {
+      width: 100vw;
+      height: 100px;
+      header {
+        width: 100vw;
+        h1 {
+          font-size: 25px;
         }
         section {
-          width: 90vw;
-          border-top-right-radius: 3px;
-          border-top-left-radius: 3px;
-          h1 {
-          }
-          h2 {
-            width: 90vw;
-            display: flex;
+          height: 40px;
+          width: 100%;
+          justify-content: center;
+          aside {
             justify-content: center;
-            font-size: 20px;
-            overflow-x: hidden;
-          }
-        }
-        h3 {
-          width: 90vw;
-        }
-        .postImage {
-          width: 90vw;
-        }
-        .postText {
-          width: 90vw;
-        }
-        aside {
-          width: 90vw;
-          display: flex;
-          align-items: center;
-          .pDiv {
-            display: flex;
+            width: 90%;
             align-items: center;
-            font-size: 15px;
-            width: 90vw;
-            justify-content: center;
-            margin-top: 20px;
-            p {
-              width: 33%;
+            button {
+              height: 30px;
             }
-            p:hover {
-            }
-            .date {
-              display: none;
-              width: 0px;
-              height: 0px;
-            }
-            .date:hover {
-            }
-          }
-          footer {
           }
         }
       }
-    }
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .ForumPage {
-    header {
-      h1 {
-        color: #ff6410;
-        text-shadow: none;
+      .postsList {
+        top: 45vh;
+        margin-top: 10px;
+        background-color: whitesmoke;
+        left: 0px;
+        width: 100vw;
       }
-      h2,
-      h3,
-      h4 {
-        color: white;
-      }
-      section {
-        aside {
-          background-color: #ff6410;
-          border: solid 1px white;
-          button {
-            background-color: rgb(28, 28, 28);
-          }
-          button:hover {
-            background-color: #ff6410;
-          }
-        }
-      }
-    }
-    .postsList {
-      background-color: rgb(28, 28, 28);
-      .post:hover {
-        cursor: pointer;
-      }
-      .post {
-        border: solid 1px white;
-        background-color: rgb(28, 28, 28);
-
-        section {
-          h1 {
-          }
-          h2 {
-          }
-        }
-        .postImage {
-        }
-        .postText {
-        }
-        aside {
-          p {
-          }
-          .pDiv {
-            p {
-            }
-            p:hover {
-              background-color: #ff6410;
-            }
-            .date {
-            }
-            .date:hover {
-              background-color: rgb(28, 28, 28);
-              color: white;
-            }
-          }
-          footer {
-          }
-        }
-      }
-    }
-    .noPosts {
-      margin-top: 10vh;
-      font-size: 25px;
-      color: black;
     }
   }
 }
