--- a/src/pages/PostPage/PostPage.module.scss
+++ b/src/pages/PostPage/PostPage.module.scss
@@ -311,6 +311,72 @@
   }
 }
 
+//--------------------------- MOBILE VIEW ---------------------------//
+//--------------------------- MOBILE VIEW ---------------------------//
+//--------------------------- MOBILE VIEW ---------------------------//
+@media (max-width: 900px) {
+  .PostPage {
+    height: 120vh;
+    flex-direction: column;
+    align-items: center;
+    .allForumsAside {
+      display: none;
+    }
+    section {
+      width: 100vw;
+      header,
+      aside,
+      .interactions,
+      .commentDiv {
+        width: 95vw;
+      }
+      p {
+        width: 100%;
+        height: 100%;
+      }
+      .interactions {
+        .date {
+          font-size: 10px;
+        }
+      }
+      .inputDiv {
+        width: 95vw;
+        form {
+          width: 100%;
+          justify-content: center;
+          input {
+            width: 100%;
+          }
+          .commentButton {
+            width: 90px;
+            font-size: 10px;
+          }
+        }
+      }
+      .commentDiv {
+        .commentSection {
+          .comment {
+            width: 95vw;
+            align-items: center;
+            .commentLeftSide {
+              height: 100%;
+              width: 70px;
+            }
+            .commentRightSide {
+              height: 100%;
+              font-size: 10px;
+            }
+          }
+        }
+      }
+    }
+    .posterInfo {
+      width: 100vw;
+      height: 250px;
+      background-color: whitesmoke;
+    }
+  }
+}
 @keyframes myAni {
   0% {
     transform: translateY(200px);
