--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -11,7 +11,7 @@
   width: 100vw;
   max-width: 2650px;
   margin: 0 auto;
-  background-image: url("/src/assets/AppFunctions/loginBackground.png");
+  background-image: url("/loginBackground.png");
   background-size: cover;
   .showDetails {
     z-index: 5;
